# hypergraph-partitioner

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
circuits/: qft20  simple  withToffolis
examples/: basic_partition_stats.py  contrived_two_phase_four_qubit_segments.py  render_partition_circuit_outputs.py  search_two_segment_circuit.py
src/hypergraph_partitioner/: __init__.py  bosonic_pipeline.py  config.py  cz_commutation.py  hgraph_builder.py  lowering.py  partitioner.py  qiskit_normalization.py  qpu_utils.py  segment_merger.py
src/hypergraph_partitioner/circuit_lowering/: circuit_lowering.py  protocols.py  scheduler.py
src/hypergraph_partitioner/distributor/: __init__.py  distributor.py  state.py
src/hypergraph_partitioner/kahypar_partioner/: __init__.py
src/hypergraph_partitioner/kahypar_partitioner/: __init__.py  partitioner.py  partitioning.py
src/hypergraph_partitioner/lowering/: __init__.py
src/hypergraph_partitioner/models/: annotated.py  circuit_annotations.py  hypergraph.py  segment.py
src/hypergraph_partitioner/preprocessing/: __init__.py  cz_commutation.py
src/quipper_distributor/: __init__.py  bosonic_adapter.py  bosonic_pipeline.py  cli.py  dist_circuit_builder.py  hgraph_builder.py  partitioner.py  preparation.py
src/quipper_distributor/models/: circuit.py  gate.py  hypergraph.py  segment.py
src/quipper_distributor/parsing/: quipper_ascii.py
tests/: conftest.py
tests/fixtures/: circuit_fixtures.py
tests/integration/: test_end_to_end.py  test_max_hedge_dist_regression.py  test_partitioner.py  test_qasm_pipeline_smoke.py
tests/integration/simulation/: statevector_test_utils.py  test_annotated_statevector.py  test_lowered_statevector.py  test_lowering.py  test_telegate_teledata.py  test_telegate_teledata_qiskit.py
tests/parity/: test_qasm_quipper_parity.py
tests/unit/: test_bosonic_adapter.py  test_bosonic_pipeline.py  test_cz_commutation.py  test_dist_circuit_builder.py  test_distribution_stats.py  test_hgraph_builder.py  test_lowering.py  test_max_hedge_dist.py  test_models.py  test_parsing.py  test_partitioner.py  test_preparation.py  test_qpu_utils.py  test_remote_cz_protocol.py  test_remote_scheduler.py  test_telegate_teledata.py
