[project]
name = "hypergraph-partitioner"
version = "0.1.2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bosonic-converters>=0.1.0,<0.2.0",
    "bosonic-model>=0.1.1,<0.2.0",
    "pydantic>=2.7.0",
    "kahypar==1.3.2 ; sys_platform != 'win32'",
    "qiskit>=2.2.2",
    "qiskit-aer>=0.17.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "ruff>=0.12.5"]

[project.scripts]
hypergraph-partition = "hypergraph_partitioner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hypergraph_partitioner"]

[tool.uv.sources]
bosonic-converters = { index = "testpypi" }
bosonic-model = { index = "testpypi" }

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F403", "F405"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require kahypar)",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pylatexenc>=2.10",
]
